# ragdoc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: eval_set.json
examples/sample_docs/: employee_handbook.md  product_faq.md
scripts/: evaluate_retrieval.py
src/ragdoc/: __init__.py  api.py  cli.py  config.py  pipeline.py
src/ragdoc/embeddings/: base.py  hashing.py  sentence_transformer.py
src/ragdoc/generation/: answerer.py
src/ragdoc/ingestion/: chunker.py  loader.py
src/ragdoc/retrieval/: bm25.py  hybrid.py  vector_store.py
tests/: conftest.py  test_api.py  test_bm25.py  test_chunker.py  test_hybrid.py  test_pipeline.py  test_vector_store.py
