[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdoc"
version = "0.1.0"
description = "Hybrid-retrieval RAG pipeline for document Q&A (BM25 + dense embeddings + reciprocal rank fusion)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.26",
    "pypdf>=4.0",
]

[project.optional-dependencies]
# Dense embeddings (downloads a small model on first use)
embeddings = ["sentence-transformers>=2.7"]
# LLM answer generation
llm = ["anthropic>=0.34"]
# REST API
api = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]
all = ["ragdoc[embeddings,llm,api,dev]"]

[project.scripts]
ragdoc = "ragdoc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
